--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>renrenren首页</h1>
+    <h2>renrenren首页</h2>
     <head>
-         <div class="logo"></div>
+         <div class="logo">
+            <a href="./html/login.html">登录</a>
+
+         </div> 
 
     </head>
 </body>
