--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <head>
          <div class="logo">
             <a href="./html/login.html">登录</a>
+            <a href="./html/register.html">注册</a>
 
          </div> 
 
