--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h2>renrenren首页</h2>
     <head>
-         <div class="logo">
+        <div class="logo"></div>
+         <div class="right">
             <a href="./html/login.html">登录</a>
             <a href="./html/register.html">注册</a>
 
