首页文字修改为日文

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>renrenren首页</h2>
+    <h2>renrenrenトップページ</h2>
     <head>
         <div class="logo"></div>
          <div class="right">
-            <a href="./html/login.html">登录</a>
-            <a href="./html/register.html">注册</a>
+            <a href="./html/login.html">ログイン</a>
+            <a href="./html/register.html">新规登录</a>
 
          </div> 
 
