中文版添加footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>renrenren首页</h2>
-    <head>
+    <header>
         <div class="logo"></div>
          <div class="right">
             <a href="./html/login.html">登录</a>
@@ -16,6 +16,14 @@
 
          </div> 
 
-    </head>
+    </header>
+    <footer>
+        <div>
+            <span>伙伴连接</span>
+            <a href="https://www.taobao.com">淘宝宝</a>
+            <a href="https://www.jd.com">京东东</a>
+            <a href="https://www.tmall.com"></a>
+        </div>
+    </footer>
 </body>
 </html>
